--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,11 @@ body{
     justify-content: center;
     border: 1px solid red;
 }
-
+#imagen {
+    width: 400px;
+    height: 400px;
+    background-size: cover;
+}
 
  /* numeros */
 .number{
